积分商城样式修改

--- a/pages/pointCategory/list.wxml
+++ b/pages/pointCategory/list.wxml
@@ -44,9 +44,9 @@
             </view>
             <view class="right">
               <view class="cont">
-                <text class="f-30 title twolist-hidden m-top10">{{item.goods_name}}</text>
-                <view class="price f-32 col-m m-top10">
-                  价格：￥{{item.sku[0].goods_price}}
+                <text class="f-30 title twolist-hidden m-top10" style="height:48rpx;">{{item.goods_name}}</text>
+                <view class="price f-32 m-top10" style="color:gray;font-size:22rpx;">
+                  价值：￥{{item.sku[0].goods_price}}
                   <text class="del f-22" wx:if="{{item.sku[0].line_price>0}}">{{item.sku[0].line_price}}</text>
                 </view>
                 <view class="price f-32 col-m m-top10">
