--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,8 @@
 <view class="container b-f">
-
+  <!-- 店铺选择-->
+  <view bindtap="chooseShop">
+  请选择店铺
+  </view>
   <!-- DIY组件 -->
   <diy-component diyItems="{{ items }}"></diy-component>
 
