--- a/pages/address/detail.wxml
+++ b/pages/address/detail.wxml
@@ -25,11 +25,11 @@
         <view class="left-name">
           <text class="f-30">所在地区</text>
         </view>
-        <view class="address-cont-box flex-box">
-          <picker mode="region" bindchange="bindRegionChange" value="{{ region }}">
-            <text wx:if="{{ region.length }}" class="f-30">{{ region }}</text>
-            <text wx:else class="f-30 col-7">选择省、市、区</text>
-          </picker>
+        <view class="address-cont-box flex-box" bindtap="bindRegionChange">
+          <!-- <picker mode="region" bindchange="bindRegionChange" value="{{ region }}"> -->
+            <text wx:if="{{ region}}" class="f-30">{{ region }}</text>
+            <text wx:else class="f-30 col-7">选择所在地区</text>
+          <!-- </picker> -->
         </view>
       </view>
       <view class="dis-flex list address-box">
@@ -41,9 +41,9 @@
         </view>
       </view>
     </view>
-    <view class="padding-box m-top35 btn-green btn-sm">
+    <!-- <view class="padding-box m-top35 btn-green btn-sm">
       <button class="f-32" catchtap="chooseAddress">一键获取微信地址</button>
-    </view>
+    </view> -->
     <view class="padding-box m-top20 profile-btn">
       <button formType="submit" disabled="{{disabled}}">保存</button>
     </view>
