--- a/pages/pointExchange/detail.wxml
+++ b/pages/pointExchange/detail.wxml
@@ -57,11 +57,11 @@
     </view>
 
     <!-- 物流信息 -->
-    <!-- <view class="flow-all-money b-f padding-box m-top20" wx:if="{{ order.delivery_type.value == deliverys.EXPRESS.value && order.delivery_status.value == 20 }}">
+    <view class="flow-all-money b-f padding-box m-top20" wx:if="{{ order.delivery_type.value == deliverys.EXPRESS.value && order.delivery_status.value == 20 }}">
       <view class="flow-all-list dis-flex">
         <text class="">物流信息</text>
       </view>
-      <navigator class="dis-flex" hover-class="none" url="./express/express?order_id={{order.order_id}}">
+      <navigator class="dis-flex" hover-class="none" url="../order/express/express?order_id={{order.order_id}}">
         <view class="flex-box">
           <view class="dis-flex flow-all-list-cont">
             <text class="col-7">物流公司：{{order.express.express_name}}</text>
@@ -74,7 +74,7 @@
           <text class="iconfont icon-xiangyoujiantou user-orderJtou"></text>
         </view>
       </navigator>
-    </view> -->
+    </view>
 
     <!-- 商品列表 -->
     <view class="flow-all-money b-f padding-box m-top20">
@@ -106,10 +106,10 @@
             <text class="small">×{{item.total_num}}</text>
           </view>
           <!-- 申请售后 -->
-          <view class="dis-flex flex-x-end">
+          <!-- <view class="dis-flex flex-x-end">
             <text wx:if="{{ item.refund }}" class="f-26 col-7">已申请售后</text>
             <view wx:elif="{{ order.isAllowRefund }}" class="btn-default" catchtap="onApplyRefund" data-id="{{item.order_goods_id}}">申请售后</view>
-          </view>
+          </view> -->
         </view>
       </view>
     </view>
@@ -131,32 +131,7 @@
       </view>
     </view>
 
-    <!-- 订单金额 -->
-    <view class="flow-all-money b-f padding-box m-top20">
-      <view class="dis-flex flow-all-list">
-        <text class="flex-five">订单金额</text>
-      </view>
-      <view class="dis-flex flow-all-list-cont">
-        <text class="flex-five col-7">商品金额：</text>
-        <text class="flex-five col-m t-r">￥{{order.total_price}}</text>
-      </view>
-      <view class="dis-flex flow-all-list-cont">
-        <text class="flex-five col-7">优惠券抵扣：</text>
-        <text class="flex-five col-m t-r">-￥{{order.coupon_price}}</text>
-      </view>
-      <view class="dis-flex flow-all-list-cont">
-        <text class="flex-five col-7">配送费用：</text>
-        <text class="flex-five col-m t-r">+￥{{order.express_price}}</text>
-      </view>
-      <view class="dis-flex flow-all-list-cont" wx:if="{{ order.update_price.value != '0.00' }}">
-        <text class="flex-five col-7">后台改价：</text>
-        <text class="flex-five col-m t-r">{{order.update_price.symbol}}￥{{order.update_price.value}}</text>
-      </view>
-      <view class="dis-flex flow-all-list-cont">
-        <text class="flex-five col-7">实付金额：</text>
-        <text class="flex-five col-m t-r">￥{{order.pay_price}}</text>
-      </view>
-    </view>
+   
 
   </scroll-view>
 
